# tui-deck

./: Cargo.toml  README.md  devenv.nix  slides.md
src/: ipc.rs  main.rs  parser.rs  renderer.rs
