[package]
name = "tui-deck"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
pulldown-cmark = "0.12"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
crossterm = "0.28"

[profile.release]
strip = true
lto = true
codegen-units = 1
